1.3.5
Fixed (probably): Entity blacklist causing crashes in some cases (#58)

1.3.4
Fixed: The heart crystal shards -> heart container recipe not working in Forge 2552+ (#55)

1.3.3
Added: Config to add additional XP to all mobs. Default gives an extra 1% per difficulty. Only works on mobs spawned since this update. (#51)
Added: Config to tweak potions applied to non-blights. You can add/remove effects and specify the minimum difficulty requirement and potion level. This is under the new mob/potion category. If changed in-game, you must restart Minecraft. (#52)
Added: Config to add difficulty to players when sleeping through the night (#53)

1.3.2
Added: Config to replace heart container drops with heart crystal shards.
Added: Config to set blight potion duration. This is just to customize the duration of the lingering effects from blight creeper explosions. Blights will still refresh their potions infinitely. Set to -1 if you want infinite duration from lingering effects.

1.3.1
Added: Config to allow/prevent fake players from getting heart container drops (main/fake_players/Can Generate Hearts)
Added: Config to allow/prevent fake players from accumulating difficulty (main/fake_players/Have Difficulty) (WIP on #48, doesn't really do anything of note right now)
Added: Config to blacklist mob extra health by dimension (main/mob/health/Dimension Blacklist) (#37)
Added: Config for difficulty change on boss kills (main/difficulty/Difficulty Per Boss Kill) (#42)
Added: Config to blacklist all bosses from becoming blights (main/mob/blights/Blacklist All Bosses) (#46)
Added: Color setting for the new health text. GREEN_TO_RED mode (default) displays green at full health and moves to red as you take damage. WHITE is just white. PSYCHEDELIC lets you taste the rainbow.
Changed: Entity blacklists now check for registry names, but the old entity ID's will still match too (#46)

1.3.0
Requires Silent Lib 2.2.9. Cuts support for Minecraft 1.10.2 and 1.11.2.