@@ -33,7 +33,7 @@ public class EntityMatchList {
 
     for (String entry : list) {
       if (entry.equalsIgnoreCase(id) || entry.equalsIgnoreCase(idOld)
-          || ("minecraft:" + entry).equalsIgnoreCase(id)) {
+          || entry.equalsIgnoreCase("minecraft:" + id)) {
         return true;
       }
     }
